# rentview-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  ruff.toml  tablas.sql
db_scripts/: 01_tables.sql  02_records.sql  03_reviews.sql  04_comments.sql  05_saved_records.sql
docker/: Dockerfile.dev  docker-compose.dev.yml
docs/: comments.md  records_tests.md  reviews.md  ruff.md  test.md
docs/bruno/: post_review_with_images.bru  review_images_add_delete.bru
src/app/: main.py
src/app/features/comments/: comments.sql  saved_records.sql
src/app/features/comments/application/: schemas.py  services.py
src/app/features/comments/domain/: exceptions.py  models.py
src/app/features/comments/infrastructure/: repository.py
src/app/features/comments/test/: conftest.py  test_repository.py  test_services.py
src/app/features/records/: records.sql
src/app/features/records/application/: commands.py  services.py
src/app/features/records/domain/: exceptions.py  models.py  repository.py
src/app/features/records/test/: test_services.py
src/app/features/reviews/: reviews.sql
src/app/features/reviews/application/: dtos.py  mappers.py  services.py
src/app/features/reviews/domain/: exceptions.py  repository.py  review.py
src/app/features/reviews/infrastructure/: mappers.py  models.py  repository.py
src/app/shared/application/: email.py
src/app/shared/domain/: pagination.py
src/app/shared/infrastructure/: database.py  pagination.py  settings.py
(+19 files in other folders)
